Mon Dec 15 16:00:09 2003  Tim Janik  <timj@gtk.org>

	* evaluator/bseevaluator.idl: 
	* artscompressor.idl: 
	* bsebalance.idl:
	* davchorus.idl: stripped "/Module" prefix from categories as this
	is auto-prepended by the idl compiler now and shouldn't be translated.
	completed i18n markup of info strings, streams and parameter groups.

Wed Dec 10 16:30:16 2003  Tim Janik  <timj@gtk.org>

	* davchorus.idl: 
	* bsebalance.idl: 
	* artscompressor.idl: started i18n markup.

Mon Nov 17 18:03:09 2003  Tim Janik  <timj@gtk.org>

	* evaluator/bseevaluator.idl: changed category.

Sun Nov 16 22:40:58 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* evaluator/compiler.*: Support for parenthesis, and sin(x).
	* evaluator/instruction.*: New Instruction::SIN instruction.
	* evaluator/token.h: Parenthesis.

	* evaluator/*: Put implementation in the Bse::EvaluatorUtils
	namespace.

	* evaluator/evaluateexpr.cc: Error handling.

Sun Nov 16 18:13:26 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* Makefile.am: Added evaluator as subdirectory.

Sun Nov 16 18:03:48 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* evaluator/*: Added BseEvaluator, a module based on a small,
	interpreted programming language which can compute expressions
	like "output = input * 0.5 + 1".
  
Sat Oct 25 01:49:50 2003  Tim Janik  <timj@gtk.org>

        * *.*: changed "copyright" field of procedures, scripts and objects
        into a "license" field which better reflects what we're asking for.

Fri Oct 24 21:26:22 2003  Tim Janik  <timj@gtk.org>

	* artscompressor.cc: 
	* artscompressor.idl: fix indentation and copyright notice.

Wed Oct 22 19:47:58 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* davxtalstrings.c: Fixed bug in triggering code inside inner loop.

Sat Oct 18 04:48:34 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* artscompressor.idl artscompressor.cc: Ported compressor from aRts.
	Stereo compression is also supported, and works slightly differently